<resources>
    <string name="app_name" translatable="false">Gimnasio Valhalla</string>
    <string name="Valhalla" translatable="false">Gimnasio Valhalla</string>
    <string name="Cliente">Cliente</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="IniciarSesion">Iniciar sesión</string>
    <string name="AccederComoPersonal">Acceder como personal</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Personal">Personal</string>
    <string name="ContraseñaConfirmacion">Confirmar contraseña</string>
    <string name="UsuarioVacio">Ingrese su correo electrónico</string>
    <string name="CampoRequerido">Campo requerido</string>
    <string name="ContraseñaVacia">Ingrese su contraseña</string>
    <string name="ContraseñaDeConfirmacionVacia">Ingrese nuevamente su contraseña</string>
    <string name="ContraseñasDiferentes">Las contraseñas son diferentes</string>
    <string name="ProcesoDeRegistro">Proceso de registro</string>
    <string name="RegistrandoUsuario">Registrando usuario, espere un momento</string>
    <string name="HaOcurridoUnError">Ha ocurrido un error inesperado :/</string>
    <string name="RegistroUsuarioExitoso">Registro exitoso, ahora puedes iniciar sesión</string>
    <string name="Correo">Correo electrónico</string>
    <string name="LaClaveDebe">La contraseña debe de tener minimo 7 caracteres</string>
    <string name="NoHayInternet">No hay conexión a Internet</string>
    <string name="IniciandoSesion">Iniciando sesión</string>
    <string name="EspereUnMomento">Espere un momento</string>
    <string name="MenuPrincipal">Menú principal</string>
    <string name="ContratarUnaClase">Contratar una clase</string>
    <string name="RentarAparatos">Rentar aparatos</string>
    <string name="DejarQuejasYSugerencias">Dejar quejas y sugerencias</string>
    <string name="CerrarSesion">Cerrar sesión</string>
    <string name="AdministrarClientes">Administrar clientes</string>
    <string name="AdministrarClases">Administrar clases</string>
    <string name="AdministrarAparatos">Administrar aparatos</string>
    <string name="AdministracionDelCliente">Administración del cliente</string>
    <string name="Registrar">Registrar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Modificar">Modificar</string>
    <string name="Consultar">Consultar</string>
    <string name="AdministrarCliente">Administrar cliente</string>
    <string name="NombreDelCliente">Nombre del cliente</string>
    <string name="Telefono">Teléfono</string>
    <string name="Id">Id</string>
    <string name="Nombre">Nombre completo</string>
    <string name="Foto">Foto: </string>
    <string name="IngreseSuNombre">Ingrese su nombre</string>
    <string name="IngreseSuTelefono">Ingrese su teléfono</string>
    <string name="HaOcurridoUnErrorAlSubirLaImagen">Ha ocurrido un error al subir la imagen :/</string>
    <string name="SubiendoImagen">Subiendo imagen</string>
    <string name="Progreso">Progreso</string>
    <string name="HaOcurridoUnErrorAlCrearElUsuario">Ha ocurrido un error al crear el usuario</string>
    <string name="HaOcurridoUnErrorAlRegistrarSusDatos">Ha ocurrido un error al registrar sus datos</string>
    <string name="DescargandoInformacion">Descargando información</string>
    <string name="ClienteEliminadoCorrectamente">Cliente eliminado correctamente</string>
    <string name="EliminarCliente">Eliminar cliente</string>
    <string name="EstasSeguroQueDeseasEliminarA">¿Estas seguro de eliminar a</string>
    <string name="Vale">Vale</string>
    <string name="No">No</string>
    <string name="QuejasYSugerencias">Quejas y sugerencias</string>
    <string name="SeleccionaUnaDeLasOpciones">Seleccione una de las opciones:</string>
    <string name="Queja">Queja</string>
    <string name="Sugerencia">Sugerencia</string>
    <string name="DescripcionDelProblema">Descripción del problema o sugerencia:</string>
    <string name="QuejasOSugerencias">Escribe aqui tu queja o sugerencia</string>
    <string name="Enviar">Enviar</string>
    <string name="QuejaRegistrada">Queja registrada correctamente</string>
    <string name="SugerenciaRegistrada">Sugerencia registrada correctamente</string>
    <string name="EnviandoQueja">Enviando queja</string>
    <string name="EnviandoSugerencia">Enviando sugerencia</string>
    <string name="CorreoNoRegistrado">Correo no registrado</string>
    <string name="ContraseñaIncorrecta">Contraseña incorrecta</string>
    <string name="RegistrarClase">Registrar clase</string>
    <string name="RegistrarCliente">Agregar cliente</string>
    <string name="ModificarCliente">Modificar cliente</string>
    <string name="ConsultarCliente">Consultar cliente</string>
    <string name="EliminarClase">Eliminar clase</string>
    <string name="ModificarClase">Modificar clase</string>
    <string name="RegistrarAparato">Registrar aparato</string>
    <string name="EliminarAparato">Eliminar aparato</string>
    <string name="ModificarAparato">Modificar aparato</string>
    <string name="ConsultarAparato">Consultar aparato</string>
    <string name="ConsultarClase">Consultar clase</string>
    <string name="SeleccionaUnCliente">Selecciona un cliente: </string>
    <string name="NoHayClientes">No hay clientes</string>
    <string name="DebeDeSeleccionarUnCliente">Debe de seleccionar un cliente</string>
    <string name="ModificacionesExitosas">Las modificaciones se realizarón con exito</string>
    <string name="HaOcurridoUnErrorAlModificarSusDatos">Ha ocurrido un error al modificar sus datos :/</string>
    <string name="NombreDeLaClase">Nombre de la clase</string>
    <string name="EntrenadorAsignado">Entrenador asignado</string>
    <string name="HorarioDeClase">Horario de clase:</string>
    <string name="Lunes">Lunes</string>
    <string name="Martes">Martes</string>
    <string name="Miercoles">Miercoles</string>
    <string name="Jueves">Jueves</string>
    <string name="Viernes">Viernes</string>
    <string name="Sabado">Sábado</string>
    <string name="Hora">Hora:</string>
    <string name="EligeHorario">Elige hora</string>
    <string name="DebeDeSeleccionarUnaHora">Debe de seleccionar una hora</string>
    <string name="SeleccionePorLoMenosUnDia">Seleccione por lo menos un día</string>
    <string name="ClaseRegistrada">Clase registrada exitosamente</string>
    <string name="HaOcurridoUnErrorAlRegistrarLaClase">Ha ocurrido un error al registrar la clase</string>
    <string name="AdministrarAparato">Administrar aparato</string>
    <string name="descripcion">Descripción</string>
    <string name="cantidad">Cantidad</string>
    <string name="area">Área:</string>
    <string name="VerQuejas">Ver quejas y sugerencias</string>
    <string name="Quejas">Quejas</string>
    <string name="Sugerencias">Sugerencias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>