<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Fondo"
    tools:context=".QuejasSugerencias">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/R1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/QuejasYSugerencias"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:textColor="@android:color/black"
                android:textSize="40dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/R2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SeleccionaUnaDeLasOpciones"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_below="@+id/R1"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/R3"
                android:layout_below="@+id/R2"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/RadioButton_Queja"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:checked="true"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Queja" />

                <RadioButton
                    android:id="@+id/RadioButton_Sugerencia"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Sugerencia" />

            </RadioGroup>

            <TextView
                android:id="@+id/R4"
                android:layout_below="@+id/R3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DescripcionDelProblema"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/R5"
                android:layout_below="@+id/R4"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:gravity="bottom"
                android:layout_gravity="center_vertical"
                android:background="@drawable/blanco_redondo"
                android:padding="5dp"
                android:hint="@string/QuejasOSugerencias">

                <EditText
                    android:id="@+id/EditText_QuejaOSugerencia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/R5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/boton_redondo_amarillo"
                android:onClick="enviarQS"
                android:text="@string/Enviar"
                android:textColor="@android:color/black" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>